feat: add queries to the fetch layers function and swagger (#43)
* feat: add queries to the fetch layers function and swagger

* fix: imporove the fetch layers code

* fix: change the parameter 'isMatch' to be not required and 'true' as default

* fix: fix the unusual names by encoding it
